cabal-version:      2.4
name:               streamly-bench
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Julian Ospald
maintainer:         hasufell@posteo.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable streamly-bench
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.1.0,
                      bytestring,
                      streamly,
                      hpath-directory,
                      unix
    hs-source-dirs:   app/streamly
    default-language: Haskell2010

executable conduit-bench
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.1.0,
                      bytestring,
                      conduit,
                      conduit-extra,
                      unix
    hs-source-dirs:   app/conduit
    default-language: Haskell2010

executable bytestring-bench
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.1.0,
                      bytestring
    hs-source-dirs:   app/bytestring
    default-language: Haskell2010

